Project-102-Roman-Numerals-Converter/AWSTemplateFormatVersion_ 2010-09-09.yml
AWSTemplateFormatVersion: 2010-09-09
Description: |
    The Roman Numerals Converter Application aims to convert the given number to the Roman numerals. The application is to be coded in Python and deployed as a web application with Flask on AWS Elastic Compute Cloud (EC2) Instance using AWS Cloudformation and CLI Services. 

Resources:
  AppServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable HTTP for Apache Web Server and SSH for secure connection
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
  AppServerHost:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-0a8b4cd432b1c3063
      KeyName: dev
      InstanceType: t2.micro
      SecurityGroupIds:
        - !Ref AppServerSecurityGroup
      Tags:
        - Key: Name
          Value: !Sub App Server of ${AWS::StackName} Stack 
      UserData:
        Fn::Base64: |
            #! /bin/bash
            yum update -y
            yum install python3
            pip3 install flask 
            FOLDER="https://raw.githubusercontent.com/CaptainDemir/my-projects/main/aws/projects/Project-102-Roman-Numerals-Converter"
            wget ${FOLDER}//app.py
            mkdir templates && cd templates 
            wget ${FOLDER}/templates/index.html 
            wget ${FOLDER}/templates/result.html 
            cd ..
            python3 app.py

Outputs:
  WebsiteURL:
    Value: !Sub 
      - http://${PublicAddress}
      - PublicAddress: !GetAtt AppServerHost.PublicDnsName
    Description: The Roman Numerals Converter Application URL
